# happy-eyeballs-cmake

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/happy-eyeballs/: rfc6555.h
src/: rfc6555.c
test/: gai.c  happy.c  main.c  rfc6555_test.c
